# cpong-esp

./: .gitignore  CMakeLists.txt  Kconfig  Makefile
include/: client_logic.h  cpong_logic.h  render.h
include/cpong/: client_main.h
include/krft/: bin_array.h  run_every.h
src/client/: client_logic.c  client_main.c  render.c
src/common/: cpong_logic.c  cpong_packets.c
src/lib/: run_every.c  server.c
src/server/: server_main.c
test/: CMakeLists.txt
